# shot-boundary-zig

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.agents/: backlog.md
.ai/: backlog.md
.github/workflows/: release-linux.yml
docs/: ALIGNMENT.md  ASSESSMENT.md  AUTOSHOT.md  AUTOSHOT_QUICK_CHECK.md  PERF.md  PLAN.md  PORTING.md  PROFILING.md  RUNTIME.md  ZIG_SPIKE_PLAN.md
models/: README.md  autoshot.onnx  autoshot.onnx.manifest.json  autoshot.safetensors  autoshot.safetensors.manifest.json  ckpt_0_200_0.pth  transnetv2.manifest.json  transnetv2.onnx  transnetv2.onnx.manifest.json  transnetv2.safetensors
references/: build.md
rust/: Cargo.toml  README.md
rust/src/: lib.rs  mlx_model.rs  mlx_segment.rs  segment.rs  segment_types.rs
scripts/: autoshot_quick_check.py  compare_segment_outputs.py  evaluate_runtime_candidate.py  evaluate_runtime_candidate_test.py  export_autoshot_onnx.py  export_autoshot_safetensors.py  export_onnx.py  export_safetensors.py  install.sh  run_autoshot_reference.py  run_python_reference.py
src/: lib.rs  main.zig  mlx_model.zig  mlx_smoke.zig  model.rs  onnx_model.zig  runtime_model.zig  runtime_segment.zig  scenes.rs  segment.rs  spec.zig  time_util.zig  unsupported_model.zig  video.rs
web/: README.md  package.json  vite.config.ts
web/scripts/: copy-ort-assets.mjs  smoke-model.ts
web/src/: App.tsx
web/src/components/: editor-timeline.tsx
web/src/lib/shot-boundary/: model-spec.ts  onnx-runtime.ts  segment-core.test.ts  segment-core.ts  video-decode.ts
